<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Configurations -->
    <string name="app_name">食@北大</string>
    <string name="server_url">http://pkucanteen.sinaapp.com/PKUCServlet</string>
    <string name="shared_preferences_name">PKUC</string>

    <!-- UI View Text -->

    <string name="username_me">我</string>
    <string name="username_unknown">匿名用户</string>
    <string name="email">邮箱</string>
    <string name="mobile">电话</string>
    <string name="about_level_label">关于等级</string>
    <string name="non_user_level">现在注册，立即获得等级：</string>

    <!-- Toast Text -->

    <string name="cannot_get_comments">暂时无法获取评论</string>
    <string name="cannot_get_pictures">暂时无法获取图片</string>
    <string name="cannot_get_user_info">暂时无法获取用户信息</string>
    <string name="cannot_login">暂时无法登录</string>
    <string name="cannot_register">暂时无法完成注册</string>
    <string name="upload_success">上传成功</string>
    <string name="upload_failed">上传失败</string>
    <string name="upload_picture_failed">上传图片失败</string>
    <string name="upload_avatar_failed">上传头像失败</string>
    <string name="login_success">登录成功</string>
    <string name="login_user_not_exist">登录失败，用户名不存在</string>
    <string name="login_wrong_password">登录失败，密码错误</string>
    <string name="register_success">注册成功</string>
    <string name="register_username_exist">注册失败，用户名已存在</string>
    <string name="account_error_relogin">账户信息错误，请重新登录</string>
    <string name="cannot_import_picture">无法导入图片</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_email">请输入您的邮箱地址</string>
    <string name="please_input_mobile">请输入您的电话号码</string>
    <string name="username_password_format">用户名/密码仅可包含英文字母和数字</string>
    <string name="passwords_are_different">两次输入的密码不一致</string>
    <string name="help_about_reward">上传奖励额度会不断变化的哦，看准时机赶快下手吧~！</string>

    <!-- Canteen Level Text -->
    <string name="canteen_level_unknown">暂无数据</string>
    <string name="canteen_level_0">空无一人</string>
    <string name="canteen_level_1">几乎没人</string>
    <string name="canteen_level_2">空位较多</string>
    <string name="canteen_level_3">略显拥挤</string>
    <string name="canteen_level_4">十分拥挤</string>
    <string name="canteen_level_5">人满为患</string>

    <!-- 我是分界线 -->

    <string name="action_settings">Settings</string>
    <string name="login_reg">登录/注册</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="new_report">发布</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="password2">确认</string>
    <string name="remember_uname">记住账号</string>
    <string name="remember_pword">记住密码</string>
    <string name="ret">返回</string>
    <string name="choose_pic_from">选择图片来源</string>
    <string name="capture">拍摄</string>
    <string name="picture">照片</string>
    <string name="mobile">电话</string>
    <string name="logout">登出</string>
    <string name="none">无</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="pictures">图片</string>
    <string name="comments">评论</string>
    <string name="comment_hint">上传文字信息额外获得奖励20分</string>
    <string name="update_msg">PKU Canteen 有新的可用版本，是否现在更新？</string>
    <string name="update_now">现在升级</string>
    <string name="update_later">以后再说</string>
    <string name="found_update">发现可用更新</string>
    <string name="cannot_get_canteen_list">无法获取食堂信息</string>
    <string name="level">拥挤程度： </string>
    <string name="refresh">刷新</string>
    <string name="level_help">用户的等级由积分决定。您可以通过发布信息获得积分，发布信息的质量越高、内容越丰富，获得的积分相应的也就越高。</string>
    <string name="regex_alpha_digit">[\\da-zA-Z]*</string>
    <string name="message">信息</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="back">返回</string>
    <string name="new_message">新信息</string>
    <string name="cannot_get_message_list">无法获得信息列表</string>
    <string name="read_message">(已读)</string>
    <string name="unread_message">(未读)</string>
    <string name="user_id">支付宝账号</string>
    <string name="please_input_userid">请输入学号</string>
    <string name="title_activity_rank">RankActivity</string>
    <string name="account">支付宝账号</string>
    <string name="please_input_account">请输入您的支付宝账号以获得奖励</string>
    <string name="incorrect_account">您输入的支付宝账号有误，请重新输入</string>

</resources>
