<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

    	<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="match_parent"
        	android:gravity="center"
        	android:singleLine="true"
        	android:text="@string/username" >
        	
    	     <requestFocus />
        </TextView>

		<EditText
    		android:id="@+id/txt_uname"
    		android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:singleLine="true" 
    		android:inputType="none" />
	
	</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
		android:padding="5dp" >
		
		<TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/password" />

        <EditText
            android:id="@+id/txt_pword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textPassword" />
    
    </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
		android:padding="5dp" >
		
		<TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/password2" />

        <EditText
            android:id="@+id/txt_pword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textPassword" />
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp" >


            <Button
                android:id="@+id/but_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#5cacee"
                android:text="@string/register"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>